// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Render <Header/> with 1 header 1`] = `
<DocumentFragment>
  <span
    class="af-table__tr-label"
  >
    label
  </span>
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-arrow-xs-up"
  />
</DocumentFragment>
`;

exports[`Header Render <Header/> with 1 header and 1 item and child Header 1`] = `
<DocumentFragment>
  <span
    class="af-table__tr-label"
  >
    label
  </span>
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
  />
  child header
</DocumentFragment>
`;

exports[`Header Render <Header/> with empty headers 1`] = `<DocumentFragment />`;
